syntax = "proto3";

package terms_of_use;

message HasConsentResponse {
  bool has_consented = 1;
}
